feat: 1.8.9-1.16.5,1.18-1.21的适配更新
- 新增支持Minecraft 1.13.2, 1.14.4, 1.15.2, 1.16.5, 1.18.1, 1.19.2, 1.20.4版本
- 创建8个版本适配器：v1_13_R2, v1_14_R1, v1_15_R1, v1_16_R3, v1_18_R1, v1_19_R1, v1_20_R3
- 实现智能版本检测和Fallback机制
- 添加Maven多版本构建系统(8个profiles)
- 跨版本API统一，确保功能一致性
- 支持Java 8(legacy版本)和Java 21(1.21版本)
- 完整的构建文档和发布指导
- 版本号更新至v2.1.0

--- a/src/main/resources/plugin-1.20.yml
+++ b/src/main/resources/plugin-1.20.yml
@@ -1,9 +1,9 @@
 name: BridgingAnalyzer
 main: sakura.kooi.BridgingAnalyzer.BridgingAnalyzer
-version: 2.1.0
-api-version: 1.21
-authors: [SakuraKooi, Ver_zhzh(1.21)]
-description: Minecraft Bridging Practice for Bedwars - Updated for 1.21 by Ver_zhzh
+version: 2.1.0-1.20
+api-version: 1.20
+authors: [SakuraKooi, Ver_zhzh(1.20-Adapter)]
+description: Minecraft Bridging Practice for Bedwars - 1.20 Compatible Version
 website: https://github.com/SakuraKoi/BridgingAnalyzer
 commands:
   bridge:
